fix: 修复 z-index 引起的 bug

--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -1,8 +1,8 @@
 :root {
+  --amount-text: #53a867;
   --bg: white;
-  --amount-text: #53A867;
-  --button-bg: #5C33BE;
   --button-bg-danger: #E10505;
+  --button-bg: #5c33be;
   --button-border-color: #ddd;
   --button-font-size: 18px;
   --button-height: 48px;
@@ -10,26 +10,37 @@
   --button-text: white;
   --date-text: #999999;
   --dialog-header-text: white;
+  --emoji-nav-text-selected: #333;
+  --emoji-nav-text: #999;
+  --error-color: #E10505;
   --float-button-bg: var(--button-bg);
   --float-button-text: white;
+  --input-border-color: #5c33be;
+  --input-min-height: 48px;
+  --input-radius: var(--button-radius);
+  --input-shadow: rgba(0,0,0,0.25);
+  --list-amount-text: var(--amount-text);
+  --list-tag-text: #333;
+  --list-time-text: var(--date-text);
+  --main: #5c33be;
   --navbar-bg-end: var(--welcome-bg-end);
   --navbar-bg-start: var(--welcome-bg-start);
   --navbar-text: white;
   --number-button-bg-important: #5c33be;
   --number-button-bg: white;
   --number-button-text-important: white;
-  --main: #5c33be;
   --overlay-bg: white;
   --overlay-mask-bg: rgba(0, 0, 0, 0.5);
-  --overlay-user-bg: #5C33BE;
-  --overlay-user-text: white;  
+  --overlay-user-bg: #5c33be;
+  --overlay-user-text: white;
   --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
   --tag-bg: #EFEFEF;
+  --text: #333;
   --top-safe-area-height: 24px;
   --total-bg: #252A43;
-  --total-text: white;
-  --total-income: #FE7275;
   --total-expenses: #53A867;
+  --total-income: #FE7275;
+  --total-text: white;
   --transition-duration: 0.5s;
   --welcome-bg-end: #8f4cd7;
   --welcome-bg-start: #5d33be;
@@ -37,17 +48,8 @@
   --welcome-nav-gap: 8px;
   --welcome-nav-height: 64px;
   --welcome-text: white;
-  --z-index-bottom-nav: 8; 
+  --z-index-bottom-nav: 8;
+  --z-index-navbar: 32;
   --z-index-overlay: 16;
-  --input-min-height: 48px;
-  --input-border-color: #5c33be;
-  --input-radius: var(--button-radius);
-  --input-shadow: rgba(0,0,0,0.25);
-  --list-tag-text: #333;
-  --list-amount-text: var(--amount-text);
-  --list-time-text: var(--date-text);
-  --main: #5c33be;
-  --error-color: #E10505;
-  --emoji-nav-text: #999;
-  --emoji-nav-text-selected: #333;
+  --z-index-van-overlay: 64;
 }
