--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -15,6 +15,7 @@
   left: 0;
   width: 16em;
   height: calc(100% - var(--top-safe-area-height));
+  color: var(--text);
 }
 .currentUser {
   padding: 32px 16px;
